# Prog-Time-Series

Etudiants1/: CMakeLists.txt
Etudiants1/Error/: StdAfxError.cpp
Etudiants1/RegArchLib/: CMakeLists.txt  RegArchCompute.cpp  RegArchCompute.h  RegArchDef.h  cAbstCondMean.cpp  cAbstCondMean.h  cAbstCondVar.cpp  cAbstCondVar.h  cAbstResiduals.h  cAr.cpp  cAr.h  cArch.cpp  cArch.h  cCondMean.cpp  cCondMean.h  cConst.cpp  cConst.h  cConstCondVar.cpp  cConstCondVar.h  cGarch.cpp  cGarch.h  cMa.cpp  cMa.h  cNormResiduals.cpp  cNormResiduals.h  cRegArchModel.cpp  cRegArchModel.h  cRegArchValue.cpp  cStudentResiduals.cpp  cStudentResiduals.h
Etudiants1/Tests/: TestCPlusPlus.cpp
Etudiants1/VectorAndMatrix/: StdAfxVectorAndMatrix.cpp  StdAfxVectorAndMatrix.h  cGSLMatrix.cpp  cGSLVector.cpp  cGSLVector.h
Etudiants2/Error/: CMakeLists.txt  StdAfxError.h  cError.cpp  cError.h
Etudiants2/RegArchLib/: CMakeLists.txt  RegArchCompute.cpp  RegArchCompute.h  RegArchDef.h  StdAfxRegArchLib.cpp  StdAfxRegArchLib.h  TargetVerRegArchLib.h  cAbstCondMean.h  cAbstCondVar.cpp  cAbstCondVar.h  cAbstResiduals.cpp  cAbstResiduals.h  cAr.cpp  cAr.h  cArch.cpp  cArch.h  cCondMean.cpp  cCondMean.h  cConst.cpp  cConst.h  cConstCondVar.cpp  cConstCondVar.h  cGarch.cpp  cGarch.h  cMa.cpp  cMa.h  cNormResiduals.cpp  cNormResiduals.h  cRegArchGradient.cpp  cRegArchGradient.h  cRegArchModel.cpp  cRegArchModel.h  cRegArchValue.cpp  cRegArchValue.h  cStudentResiduals.cpp  cStudentResiduals.h
Etudiants2/Tests/: CMakeLists.txt  StdAfxTestCPlusPlus.cpp  StdAfxTestCPlusPlus.h  TestCPlusPlus.cpp
Etudiants2/VectorAndMatrix/: CMakeLists.txt  cGSLMatrix.h
